--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,10 @@ channels-redis==2.3.0
 constantly==15.1.0
 cryptography==2.3.1
 daphne==2.2.2
-Django==2.1.1
 django-debug-toolbar==1.10.1
 django-redis-cache==1.7.1
+django-rest-framework==0.1.0
+djangorestframework==3.9.0
 h2==3.0.1
 hiredis==0.2.0
 hpack==3.0.0
@@ -33,7 +34,6 @@ Pygments==2.2.0
 PyHamcrest==1.9.0
 PyMySQL==0.9.2
 pyOpenSSL==18.0.0
-pytz==2018.5
 redis==2.10.6
 service-identity==17.0.0
 six==1.11.0
