--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ constantly==15.1.0
 cryptography==2.3.1
 daphne==2.2.2
 django-debug-toolbar==1.10.1
+django-extensions==2.1.3
 django-redis-cache==1.7.1
 djangorestframework==3.9.0
 h2==3.0.1
@@ -22,6 +23,7 @@ hyperframe==5.1.0
 hyperlink==18.0.0
 incremental==17.5.0
 msgpack==0.5.6
+mysqlclient==1.3.14
 Pillow==5.3.0
 priority==1.3.0
 pyasn1==0.4.4
