--- a/Pipfile
+++ b/Pipfile
@@ -37,7 +37,6 @@ priority = "==1.3.0"
 pyasn1 = "==0.4.4"
 pyasn1-modules = "==0.2.2"
 pycparser = "==2.18"
-pycrypto = "==2.6.1"
 pycryptodome = "==3.6.6"
 pygments = "==2.2.0"
 pyhamcrest = "==1.9.0"
@@ -50,6 +49,8 @@ sqlparse = "==0.2.4"
 twisted = "==18.7.0"
 txaio = "==18.8.1"
 #zope-interface = "==4.5.0"
+gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
