--- a/Pipfile
+++ b/Pipfile
@@ -34,7 +34,7 @@ priority = "==1.3.0"
 pyasn1 = "==0.4.4"
 pyasn1-modules = "==0.2.2"
 pycparser = "==2.18"
-pycryptodome = "==3.6.6"
+pycryptodome = "*"
 pygments = "==2.2.0"
 pyhamcrest = "==1.9.0"
 pymysql = "==0.9.2"
