--- a/Pipfile
+++ b/Pipfile
@@ -46,6 +46,9 @@ sqlparse = "==0.2.4"
 twisted = "==18.7.0"
 txaio = "==18.8.1"
 django-heroku = "*"
+boto = "*"
+boto3 = "*"
+django-storages = "*"
 
 [requires]
 python_version = "3.7"
